[gd_scene load_steps=3 format=3 uid="uid://cwroqm35wwu7n"]

[ext_resource type="Script" path="res://UI/Menus/pause_menu.gd" id="1_jr8ao"]
[ext_resource type="PackedScene" uid="uid://b0rmrjb71troy" path="res://UI/Menus/settings_menu.tscn" id="2_85j6y"]

[node name="pause_menu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jr8ao")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.309804, 1, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.5
offset_top = -196.5
offset_right = 184.5
offset_bottom = 196.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.964706, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Pause
"
horizontal_alignment = 1

[node name="resume_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../quit_button")
focus_neighbor_bottom = NodePath("../controls_button")
theme_override_font_sizes/font_size = 50
text = "Resume"

[node name="controls_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../resume_button")
focus_neighbor_bottom = NodePath("../settings_button")
theme_override_font_sizes/font_size = 50
text = "Game Controls"

[node name="settings_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../controls_button")
focus_neighbor_bottom = NodePath("../quit_button")
theme_override_font_sizes/font_size = 50
text = "Settings"

[node name="quit_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../settings_button")
focus_neighbor_bottom = NodePath("../resume_button")
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="settings_menu" parent="." instance=ExtResource("2_85j6y")]
visible = false

[connection signal="pressed" from="VBoxContainer/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/controls_button" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="VBoxContainer/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/quit_button" to="." method="_on_quit_button_pressed"]
